fix spacing in tags in homepage

--- a/src/index.css
+++ b/src/index.css
@@ -102,5 +102,3 @@ footer {
   margin-bottom: 1rem;
   gap: 1rem;
 }
-
-.img-about-us {}
